# greatlearning-31734

./: .gitignore  README.md  pyproject.toml
example/: main.py
exercises/: DeepLearningMnist.ipynb  DeepLearning_Wine.ipynb  Tensorflow_Introduction.ipynb  basic_demo.py  binary_classifier_cnn.py  display_mnist_data.py  getting_started.ipynb  getting_started.py  linear_regression.py  mnist_dataset_train.py  use_mnist_model.py
models/: mnist_20_epochs.keras  mnist_5_epochs.keras
notes/: 05_INTRO_TO_NEURAL_NETWORKS.md  06_GETTING_STARTED_WITH_TENSORFLOW  07_BASIC_DEMO_ON_TENSORFLOW.md  08_LINEAR_REGRESSION.md  09_DEMO_1_MNIST_CHARACTER_RECOGNITION.md  10_BINARY_CLASSIFIER_USING_CNNS.md
