[project]
name = "greatlearning-31734"
version = "0.1.0"
requires-python = ">=3.13.5,<3.14"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "tensorflow[and-cuda]",
    "opencv-python",  # Getting it like this doesn't have CUDA support (hardware accelleration)
    "opencv-contrib-python"
]

[dependency-groups]
dev = [
    "ruff",
]

[tool.ruff]
src = ["exercises"]

[tool.ruff.format]
